--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,11 @@
 
 .card {
   background-color: black;
-  border-radius: 1rem;
+  border-radius: 0.rem;
   height:300px;
   width: 700px;
   padding: 2rem 4rem;
+  position: relative;
 }
 
 .quote {
@@ -28,7 +29,7 @@
 }
 h1 {
   position: absolute;
-  top: 70px;
+  top: 15%;
   text-align: center;
   font-family: 'Roboto', sans-serif;
   font-size: 2.5rem;
@@ -67,3 +68,27 @@ button:hover {
  padding: 3px;
 }
 
+.icon {
+  background-color: black;
+  height: 20%;
+  width: 20%;
+  position: absolute;
+  bottom: 9%;
+  left: 8%;
+  color: white;
+}
+.icon:hover {
+  color: #1DA1F2;
+}
+.author {
+  position: absolute;
+   bottom: 11%;
+   right: 13%;
+  color: white;
+  font-size: 1.2rem;
+  font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+  word-spacing: 3px;
+}
+.author:hover {
+  color: #1DA1F2;
+}
