--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
 #root {
-  max-width: 800px;
   margin: 0 auto;
   text-align: center;
-  padding: 2rem;
+}
+
+body {
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .card {
